--- a/TuanQD_MockProject/app/src/main/res/layout/themes_custom_item.xml
+++ b/TuanQD_MockProject/app/src/main/res/layout/themes_custom_item.xml
@@ -1,6 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ImageView
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="50dp"
-    android:layout_height="50dp"
-    android:src="@drawable/ic__01_popup_menu_paint"/>
+    android:layout_width="match_parent"
+    android:layout_height="100dp"
+    android:background="@drawable/stroke_popup_menu">
+    <ImageView
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:src="@drawable/ic__01_popup_menu_paint">
+    </ImageView>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:text="@string/themes"
+        android:layout_marginStart="20dp"
+        android:gravity="center_vertical"
+        android:textColor="@color/white"
+        >
+
+    </TextView>
+</LinearLayout>
