--- a/TuanQD_MockProject/app/src/main/res/menu/options_menu.xml
+++ b/TuanQD_MockProject/app/src/main/res/menu/options_menu.xml
@@ -4,30 +4,37 @@
     app:showAsAction="always">
     <item
         android:id="@+id/itemThemes"
-        android:title=""
-        app:actionLayout="@layout/themes_custom_item"/>
+        app:actionLayout="@layout/themes_custom_item"
+        android:icon="@drawable/ic__01_popup_menu_paint"
+        android:title="@string/themes" />
     <item
         android:id="@+id/itemCutter"
         android:icon="@drawable/ic__02_popup_menu_scissors"
-        android:title="@string/ringtone_cutter" />
+        android:title="@string/ringtone_cutter"
+        app:actionLayout="@layout/themes_custom_item"/>
     <item
         android:id="@+id/itemSleepTimer"
+        app:actionLayout="@layout/themes_custom_item"
         android:icon="@drawable/ic__03_popup_menu_stopwatch"
         android:title="@string/sleep_timer" />
     <item
         android:id="@+id/itemEquliser"
+        app:actionLayout="@layout/themes_custom_item"
         android:icon="@drawable/ic__04_popup_menu_sound_bars"
         android:title="@string/equliser" />
     <item
         android:id="@+id/itemDriveMode"
+        app:actionLayout="@layout/themes_custom_item"
         android:icon="@drawable/ic__3_popup_menu_car"
         android:title="@string/drive_mode" />
     <item
         android:id="@+id/itemHiddenFolder"
+        app:actionLayout="@layout/themes_custom_item"
         android:icon="@drawable/ic__06_popup_menu_folder"
         android:title="@string/hidden_folder" />
     <item
         android:id="@+id/itemScanMedia"
+        app:actionLayout="@layout/themes_custom_item"
         android:icon="@drawable/ic__07_popup_menu_scanner"
         android:title="@string/scan_media" />
 
