--- a/TuanQD_MockProject/app/src/main/res/layout/toolbar.xml
+++ b/TuanQD_MockProject/app/src/main/res/layout/toolbar.xml
@@ -4,6 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 <com.google.android.material.appbar.MaterialToolbar
     android:id="@+id/toolbar"
+    style="@style/ThemeOverlay.AppCompat.ActionBar"
     android:layout_width="match_parent"
     android:layout_height="?actionBarSize"
     android:layout_marginTop="40dp"
