--- a/TuanQD_MockProject/app/src/main/res/values/themes.xml
+++ b/TuanQD_MockProject/app/src/main/res/values/themes.xml
@@ -11,7 +11,9 @@
     <item name="colorSecondaryVariant">@color/teal_700</item>
     <item name="colorOnSecondary">@color/black</item>
     <!-- Status bar color. -->
-    <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+    <item name="android:windowTranslucentStatus">true</item>
+    <item name="android:windowDrawsSystemBarBackgrounds">false</item>
+    <item name="android:statusBarColor" tools:targetApi="l">@android:color/holo_blue_bright</item>
     <!-- Customize your theme here. -->
   </style>
 
