--- a/TuanQD_MockProject/app/src/main/res/values/styles.xml
+++ b/TuanQD_MockProject/app/src/main/res/values/styles.xml
@@ -26,4 +26,8 @@
 
     </style>
 
+    <style name="MyCustomTextAppearance" parent="TextAppearance.Design.Tab">
+        <item name="textAllCaps">false</item>
+    </style>
+
 </resources>
