--- a/TuanQD_MockProject/app/src/main/res/layout/toolbar.xml
+++ b/TuanQD_MockProject/app/src/main/res/layout/toolbar.xml
@@ -7,7 +7,7 @@
     style="@style/ThemeOverlay.AppCompat.ActionBar"
     android:layout_width="match_parent"
     android:layout_height="?actionBarSize"
-    android:layout_marginTop="40dp"
+    android:layout_marginTop="70dp"
     android:background="@color/black"
     android:elevation="0dp"
     app:navigationIcon="@drawable/ic_burger_menu">
@@ -15,7 +15,7 @@
 <androidx.appcompat.widget.SearchView
     android:layout_width="match_parent"
     android:layout_marginEnd="20dp"
-    android:layout_height="match_parent"
+    android:layout_height="40dp"
     android:background="@drawable/stroke_search_view">
 </androidx.appcompat.widget.SearchView>
 </com.google.android.material.appbar.MaterialToolbar>
