--- a/TuanQD_MockProject/app/src/main/res/navigation/nav_graph.xml
+++ b/TuanQD_MockProject/app/src/main/res/navigation/nav_graph.xml
@@ -1,13 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/fragmentSetting">
+    app:startDestination="@id/homeFragment">
     <fragment
-    android:label="Page title">
-</fragment>
+        android:id="@+id/songsFragment"
+        android:name="com.tuanqd.mockproject.songs.viewpager_songs.SongsFragment"
+        android:label="Songs"
+        tools:layout="@layout/fragment_songs" />
     <fragment
-        android:id="@+id/fragmentSetting"
-        android:name="com.example.baseproject.view.FragmentSetting"
-        android:label="FragmentSetting" />
+        android:id="@+id/homeFragment"
+        android:name="com.tuanqd.mockproject.home.HomeFragment"
+        android:label="Home"
+        tools:layout="@layout/fragment_home" />
+    <fragment
+        android:id="@+id/settingsFragment"
+        android:name="com.tuanqd.mockproject.settings.SettingsFragment"
+        android:label="Settings"
+        tools:layout="@layout/fragment_settings" />
 </navigation>
