--- a/TuanQD_MockProject/app/src/main/res/layout/item_allsongs_songs.xml
+++ b/TuanQD_MockProject/app/src/main/res/layout/item_allsongs_songs.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:bind="http://schemas.android.com/apk/res-auto">
     <data>
         <variable
             name="AllSongsModel"
@@ -14,8 +15,7 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginBottom="15dp"
+        android:layout_marginBottom="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -28,15 +28,21 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
+
             <TextView
                 android:id="@+id/txtTitle_allSongs"
-                android:layout_width="wrap_content"
+                android:layout_width="150dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:text="@{AllSongsModel.title}"
-                android:textSize="25sp"
+                android:maxLines="1"
+                android:maxLength="30"
+                android:ellipsize="end"
+                android:textSize="20sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="@+id/img_thumbs_allSongs"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0"
                 app:layout_constraintStart_toEndOf="@+id/img_thumbs_allSongs"
                 app:layout_constraintTop_toTopOf="@+id/img_thumbs_allSongs"
                 app:layout_constraintVertical_bias="0.0" />
@@ -47,7 +53,6 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
                 android:text="@{AllSongsModel.artist}"
-                android:textSize="20sp"
                 app:layout_constraintEnd_toEndOf="@+id/txtTitle_allSongs"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="@+id/txtTitle_allSongs"
@@ -55,14 +60,13 @@
 
             <ImageView
                 android:id="@+id/img_thumbs_allSongs"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:imageResource="@{AllSongsModel.thumbs}" />
+                bind:imageBitmap="@{AllSongsModel.bitmap}" />
 
             <ImageView
                 android:id="@+id/img_play_pause_allSongs"
