--- a/TuanQD_MockProject/app/src/main/res/layout/fragment_all_songs.xml
+++ b/TuanQD_MockProject/app/src/main/res/layout/fragment_all_songs.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.tuanqd.mockproject.songs.viewpager_songs.AllSongsFragment">
+    tools:context="com.tuanqd.mockproject.songs.allsongs.AllSongsFragment">
     <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
