--- a/TuanQD_MockProject/app/src/main/res/layout/fragment_genre.xml
+++ b/TuanQD_MockProject/app/src/main/res/layout/fragment_genre.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.tuanqd.mockproject.songs.viewpager_songs.GenreFragment">
+    tools:context="com.tuanqd.mockproject.songs.genre.GenreFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
