--- a/TuanQD_MockProject/app/src/main/res/layout/fragment_songs.xml
+++ b/TuanQD_MockProject/app/src/main/res/layout/fragment_songs.xml
@@ -6,7 +6,7 @@
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.tuanqd.mockproject.songs.viewpager_songs.SongsFragment"
+    tools:context="com.tuanqd.mockproject.songs.SongsFragment"
     android:id="@+id/songsFragment"
     android:orientation="vertical">
     <com.google.android.material.tabs.TabLayout
