--- a/TuanQD_MockProject/app/src/main/res/navigation/nav_graph.xml
+++ b/TuanQD_MockProject/app/src/main/res/navigation/nav_graph.xml
@@ -6,7 +6,7 @@
     app:startDestination="@id/homeFragment">
     <fragment
         android:id="@+id/songsFragment"
-        android:name="com.tuanqd.mockproject.songs.viewpager_songs.SongsFragment"
+        android:name="com.tuanqd.mockproject.songs.SongsFragment"
         android:label="Songs"
         tools:layout="@layout/fragment_songs" />
     <fragment
