--- a/TuanQD_MockProject/app/src/main/res/navigation/nav_graph_songs_fragment.xml
+++ b/TuanQD_MockProject/app/src/main/res/navigation/nav_graph_songs_fragment.xml
@@ -7,27 +7,27 @@
 
     <fragment
         android:id="@+id/albumsFragment"
-        android:name="com.tuanqd.mockproject.songs.viewpager_songs.AlbumsFragment"
+        android:name="com.tuanqd.mockproject.songs.albums.AlbumsFragment"
         android:label="fragment_albums"
         tools:layout="@layout/fragment_albums" />
     <fragment
         android:id="@+id/allSongsFragment"
-        android:name="com.tuanqd.mockproject.songs.viewpager_songs.AllSongsFragment"
+        android:name="com.tuanqd.mockproject.songs.allsongs.AllSongsFragment"
         android:label="fragment_all_songs"
         tools:layout="@layout/fragment_all_songs" />
     <fragment
         android:id="@+id/artistFragment"
-        android:name="com.tuanqd.mockproject.songs.viewpager_songs.ArtistFragment"
+        android:name="com.tuanqd.mockproject.songs.artist.ArtistFragment"
         android:label="fragment_artist"
         tools:layout="@layout/fragment_artist" />
     <fragment
         android:id="@+id/genreFragment"
-        android:name="com.tuanqd.mockproject.songs.viewpager_songs.GenreFragment"
+        android:name="com.tuanqd.mockproject.songs.genre.GenreFragment"
         android:label="fragment_genre"
         tools:layout="@layout/fragment_genre" />
     <fragment
         android:id="@+id/playlistSongsFragment"
-        android:name="com.tuanqd.mockproject.songs.viewpager_songs.PlaylistSongsFragment"
+        android:name="com.tuanqd.mockproject.songs.playlist.PlaylistSongsFragment"
         android:label="fragment_playlist_songs"
         tools:layout="@layout/fragment_playlist_songs" />
 </navigation>
