--- a/TuanQD_MockProject/app/src/main/res/layout/fragment_home.xml
+++ b/TuanQD_MockProject/app/src/main/res/layout/fragment_home.xml
@@ -8,13 +8,11 @@
     tools:context="com.tuanqd.mockproject.home.HomeFragment"
     android:id="@+id/homeFragment"
     android:orientation="vertical"
-    android:background="@color/black">
+    android:background="@color/white">
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view_home"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_margin="20dp">
-
+        android:layout_height="match_parent">
     </androidx.recyclerview.widget.RecyclerView>
 
 </LinearLayout>
