--- a/TuanQD_MockProject/app/src/main/res/layout/item_recently_played_home.xml
+++ b/TuanQD_MockProject/app/src/main/res/layout/item_recently_played_home.xml
@@ -1,15 +1,81 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout   xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 <data>
     <variable
-        name="RecentlyPlayedModel"
+        name="RecentlyPlayedHomeModel"
         type="com.tuanqd.mockproject.home.RecentlyPlayedHomeModel" />
 </data>
-
     <androidx.constraintlayout.widget.ConstraintLayout
-
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:background="@drawable/stroke_popup_menu_solid">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <ImageView
+            android:id="@+id/img_thumbs_recently_played"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:imageResource="@{RecentlyPlayedHomeModel.imagePause}"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.5"
+            app:srcCompat="@drawable/ic_play_music" />
+
+        <TextView
+            android:id="@+id/title_recently_played"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="24dp"
+            android:textColor="@color/white"
+            android:text="@{RecentlyPlayedHomeModel.title}"
+            app:layout_constraintBottom_toBottomOf="@+id/img_thumbs_recently_played"
+            app:layout_constraintStart_toEndOf="@+id/img_thumbs_recently_played"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/artist_recently_played"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="10sp"
+            android:text="@{RecentlyPlayedHomeModel.singer}"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/title_recently_played"
+            app:layout_constraintHorizontal_bias="0.0"
+            android:textColor="@color/white"
+            app:layout_constraintStart_toStartOf="@+id/title_recently_played"
+            app:layout_constraintTop_toBottomOf="@+id/title_recently_played"
+            app:layout_constraintVertical_bias="0.01" />
+
+        <ImageView
+            android:id="@+id/imgHeart"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="48dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:imageResource="@{RecentlyPlayedHomeModel.heartImageRes}"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.342"
+            app:srcCompat="@drawable/ic_heart" />
+
+        <ImageView
+            android:id="@+id/imgStar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:imageResource="@{RecentlyPlayedHomeModel.rateImageRes}"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imgHeart"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="@+id/imgHeart"
+            app:srcCompat="@drawable/ic_group_rate" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
