--- a/TuanQD_MockProject/app/src/main/res/values/colors.xml
+++ b/TuanQD_MockProject/app/src/main/res/values/colors.xml
@@ -9,4 +9,7 @@
   <color name="white">#FFFFFFFF</color>
   <color name="icon_mock">#e57780</color>
   <color name="selected_bottom_nav">#e57780</color>
+  <color name="divider_color">#E01515</color>
+  <color name="background_mock">#181b2c</color>
+  <color name="text_fade">#727273</color>
 </resources>
