--- a/TuanQD_MockProject/app/src/main/res/values/styles.xml
+++ b/TuanQD_MockProject/app/src/main/res/values/styles.xml
@@ -29,5 +29,11 @@
     <style name="MyCustomTextAppearance" parent="TextAppearance.Design.Tab">
         <item name="textAllCaps">false</item>
     </style>
+    <style name="RectangleBorderImageStyle">
+        <item name="cornerSize">10%</item>
+    </style>
+    <style name="Circular">
+        <item name="cornerSize">50%</item>
+    </style>
 
 </resources>
