--- a/TuanQD_MockProject/app/src/main/res/layout/fragment_settings.xml
+++ b/TuanQD_MockProject/app/src/main/res/layout/fragment_settings.xml
@@ -1,17 +1,117 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.tuanqd.mockproject.settings.SettingsFragment"
-    android:id="@+id/settingsFragment">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/setting_fragment"
-        android:textSize="30sp"
-        android:gravity="center"/>
+        android:background="@color/background_mock"
+        android:orientation="vertical">
 
-</FrameLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:id="@+id/imgDisplay"
+                style="@style/style_imageView_settings_fragment"
+                app:srcCompat="@drawable/ic_youtube_settings" />
+
+            <TextView
+                android:id="@+id/txtDisplay"
+                style="@style/style_settings_fragment"
+                android:text="@string/display" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:id="@+id/imgAudio"
+                style="@style/style_imageView_settings_fragment"
+                android:layout_gravity="center_vertical"
+                android:src="@drawable/ic_volume_settings" />
+
+            <TextView
+                android:id="@+id/txtAudio"
+                style="@style/style_settings_fragment"
+                android:text="@string/audio" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:id="@+id/imgHeadset"
+                style="@style/style_imageView_settings_fragment"
+                android:layout_gravity="center_vertical"
+                android:src="@drawable/ic_headphones_settings" />
+
+            <TextView
+                android:id="@+id/txtHeadset"
+                style="@style/style_settings_fragment"
+                android:text="@string/headset" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:id="@+id/imgLockscreen"
+                style="@style/style_imageView_settings_fragment"
+                android:layout_gravity="center_vertical"
+                android:src="@drawable/ic_padlock_settings" />
+
+            <TextView
+                android:id="@+id/txtLockscreen"
+                style="@style/style_settings_fragment"
+                android:text="@string/lockscreen" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:id="@+id/imgAdvanced"
+                style="@style/style_imageView_settings_fragment"
+                android:layout_gravity="center_vertical"
+                android:src="@drawable/ic_padlock_settings" />
+
+            <TextView
+                android:id="@+id/txtAdvanced"
+                style="@style/style_settings_fragment"
+                android:text="@string/advanced" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:id="@+id/imgOther"
+                style="@style/style_imageView_settings_fragment"
+                android:layout_gravity="center_vertical"
+                android:src="@drawable/ic_others_settings" />
+
+            <TextView
+                android:id="@+id/txtOther"
+                android:layout_width="0dp"
+                android:layout_height="70dp"
+                android:layout_weight="9"
+                android:gravity="center_vertical"
+                android:padding="10dp"
+                android:paddingStart="20dp"
+                android:text="@string/other"
+                android:textColor="@color/white"
+                android:textSize="20sp" />
+        </LinearLayout>
+
+
+    </LinearLayout>
+</layout>
