--- a/TuanQD_MockProject/app/src/main/res/layout/fragment_albums.xml
+++ b/TuanQD_MockProject/app/src/main/res/layout/fragment_albums.xml
@@ -1,16 +1,12 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingStart="15dp"
     tools:context="com.tuanqd.mockproject.songs.albums.AlbumsFragment">
-
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/hello_albums_fragment"
-        android:layout_gravity="center"
-        android:textSize="25sp"
-        android:textAlignment="center"/>
-
-</FrameLayout>
+<androidx.recyclerview.widget.RecyclerView
+    android:layout_width="match_parent"
+    android:paddingTop="20dp"
+    android:layout_height="match_parent"
+    android:paddingStart="20dp"/>
+</LinearLayout>
