--- a/TuanQD_MockProject/app/src/main/res/layout/item_allsongs_songs.xml
+++ b/TuanQD_MockProject/app/src/main/res/layout/item_allsongs_songs.xml
@@ -8,9 +8,8 @@
 
         <variable
             name="AllSongsModel"
-            type="com.tuanqd.mockproject.songs.allsongs.AllSongsModel" />
+            type="com.tuanqd.mockproject.songs.allsongs.SongsModel" />
     </data>
-
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -25,7 +24,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/black">
+            android:background="@color/background_mock">
 
             <ImageView
                 android:id="@+id/img_thumbs_allSongs"
