--- a/TuanQD_MockProject/app/src/main/res/values/styles.xml
+++ b/TuanQD_MockProject/app/src/main/res/values/styles.xml
@@ -17,11 +17,32 @@
         <item name="android:padding">10dp</item>
         <item name="android:background">@drawable/stroke_popup_menu</item>
     </style>
+    <style name="style_settings_fragment">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_weight">9</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:paddingStart">20dp</item>
+        <item name="android:textAlignment">viewStart</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:layout_height">70dp</item>
+        <item name="android:padding">10dp</item>
+        <item name="android:background">@drawable/stroke_popup_menu</item>
+    </style>
 
     <style name="style_imageView_popup_menu">
         <item name="android:layout_width">20dp</item>
         <item name="android:layout_gravity">center_vertical</item>
         <item name="android:layout_height">20dp</item>
+        <item name="android:layout_weight">1</item>
+
+    </style>
+
+    <style name="style_imageView_settings_fragment">
+        <item name="android:layout_width">25dp</item>
+        <item name="android:layout_height">25dp</item>
+        <item name="android:layout_gravity">center_vertical</item>
+
         <item name="android:layout_weight">1</item>
 
     </style>
@@ -34,6 +55,13 @@
     </style>
     <style name="Circular">
         <item name="cornerSize">50%</item>
+    </style>
+
+    <style name="imageView_tableLayout_style">
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_weight">0.5</item>
+        <item name="android:scaleType">fitXY</item>
     </style>
 
 </resources>
