--- a/TuanQD_MockProject/app/src/main/res/layout/item_top_albums_artist_details.xml
+++ b/TuanQD_MockProject/app/src/main/res/layout/item_top_albums_artist_details.xml
@@ -6,18 +6,17 @@
     <data>
 
         <variable
-            name="RecommendedHomeModel"
-            type="com.tuanqd.mockproject.home.RecommendedHomeModel" />
+            name="TopAlbumsModel"
+            type="com.tuanqd.mockproject.songs.artist.TopAlbumsModel" />
     </data>
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/cardView_recommended"
+        android:id="@+id/cartView_playlist"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@color/background_mock">
+        android:layout_height="wrap_content">
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/constraint_recommended"
+            android:id="@+id/consLayoutAD"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@color/background_mock"
@@ -25,12 +24,12 @@
 
             <com.google.android.material.imageview.ShapeableImageView
                 android:id="@+id/imgTopAlbumsList"
-                android:layout_width="200dp"
-                android:layout_height="100dp"
+                android:layout_width="100dp"
+                android:layout_height="80dp"
                 android:background="@drawable/corner_image"
                 android:scaleType="fitXY"
-                app:imageResource="@{RecommendedHomeModel.imageResource}"
-                app:layout_constraintBottom_toBottomOf="parent"
+                app:imageResource="@{TopAlbumsModel.imgTopAlbumsResource}"
+                app:layout_constraintBottom_toTopOf="@id/txt_item0_topAlbums"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -45,7 +44,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
-                android:text="@{RecommendedHomeModel.bigText}"
+                android:text="@{TopAlbumsModel.textItem0}"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -58,7 +57,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:text="@{RecommendedHomeModel.smallText}"
+                android:text="@{TopAlbumsModel.textItem1}"
                 android:textColor="@color/text_fade"
                 android:textSize="13sp"
                 app:layout_constraintEnd_toEndOf="@+id/txt_item0_topAlbums"
@@ -67,5 +66,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/txt_item0_topAlbums" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
+
+
     </androidx.cardview.widget.CardView>
 </layout>
