--- a/TuanQD_MockProject/app/src/main/res/layout/item_topsongs_artist_details.xml
+++ b/TuanQD_MockProject/app/src/main/res/layout/item_topsongs_artist_details.xml
@@ -2,14 +2,14 @@
 <layout xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
-<data>
-    <variable
-        name="RecentlyPlayedHomeModel"
-        type="com.tuanqd.mockproject.home.RecentlyPlayedHomeModel" />
-</data>
+    <data>
+        <variable
+            name="TopSongsModel"
+            type="com.tuanqd.mockproject.songs.artist.TopSongsModel" />
+    </data>
     <androidx.constraintlayout.widget.ConstraintLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
         android:layout_marginStart="20dp"
         android:background="@drawable/stroke_popup_menu_solid">
 
@@ -19,7 +19,7 @@
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:imageResource="@{RecentlyPlayedHomeModel.imagePause}"
+            app:imageResource="@{TopSongsModel.imgTopSongResource}"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -30,52 +30,37 @@
             android:id="@+id/title_top_song"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="24dp"
+            android:layout_marginStart="20dp"
+            android:text="@{TopSongsModel.titleSong}"
             android:textColor="@color/white"
-            android:text="@{RecentlyPlayedHomeModel.title}"
             app:layout_constraintBottom_toBottomOf="@+id/img_play_top_song"
             app:layout_constraintStart_toEndOf="@+id/img_play_top_song"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="1.0" />
 
         <TextView
             android:id="@+id/duration_top_song"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="10sp"
-            android:text="@{RecentlyPlayedHomeModel.singer}"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="@+id/title_top_song"
-            app:layout_constraintHorizontal_bias="0.0"
+            android:text="@{TopSongsModel.duration}"
             android:textColor="@color/white"
-            app:layout_constraintStart_toStartOf="@+id/title_top_song"
-            app:layout_constraintTop_toBottomOf="@+id/title_top_song"
-            app:layout_constraintVertical_bias="0.01" />
+            android:textSize="10sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/img_menu_top_song"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/title_top_song"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
             android:id="@+id/img_menu_top_song"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="48dp"
+            android:layout_marginEnd="20dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:imageResource="@{RecentlyPlayedHomeModel.heartImageRes}"
+            app:imageResource="@{TopSongsModel.imgMenuTopSongRes}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.342"
-            app:srcCompat="@drawable/ic_heart" />
-
-        <ImageView
-            android:id="@+id/imgStar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="16dp"
-            android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:imageResource="@{RecentlyPlayedHomeModel.rateImageRes}"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/img_menu_top_song"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toStartOf="@+id/img_menu_top_song"
-            app:srcCompat="@drawable/ic_group_rate" />
-
+            app:srcCompat="@drawable/ic_more_top_songs_artist_details" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
