--- a/TuanQD_MockProject/app/src/main/res/values/styles.xml
+++ b/TuanQD_MockProject/app/src/main/res/values/styles.xml
@@ -64,4 +64,11 @@
         <item name="android:scaleType">fitXY</item>
     </style>
 
+    <style name="style_topAlbums_artist">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_weight">0.25</item>
+        <item name="android:orientation">vertical</item>
+    </style>
+
 </resources>
